--- a/src/content/once-ui/components/icon.mdx
+++ b/src/content/once-ui/components/icon.mdx
@@ -196,6 +196,6 @@ The Icon component uses icons from the [react-icons](https://react-icons.github.
     ["decorative", "boolean", "true"],
     ["tooltip", "ReactNode"],
     ["tooltipPosition", ["top", "bottom", "left", "right"], "top"],
-    ["...flex", "FlexProps"]
+    ["...flex"]
   ]}
 />
