--- a/src/content/once-ui/components/logoCloud.mdx
+++ b/src/content/once-ui/components/logoCloud.mdx
@@ -187,6 +187,6 @@ The LogoCloud component extends the Grid component, so you can use all Grid prop
     ["rotationInterval", "number", "5000"],
     ["className"],
     ["style"],
-    ["...grid", "GridProps"]
+    ["...grid"]
   ]}
 />
