--- a/src/content/once-ui/modules/megaMenu.mdx
+++ b/src/content/once-ui/modules/megaMenu.mdx
@@ -93,7 +93,7 @@ When `href` is matched by the current route, the group or item is marked `select
     ["menuGroups", "MenuGroup[]"],
     ["className"],
     ["style"],
-    ["...FlexProps"]
+    ["...flex"]
   ]}
 />
 
