--- a/src/content/once-ui/form-controls/radioButton.mdx
+++ b/src/content/once-ui/form-controls/radioButton.mdx
@@ -46,40 +46,37 @@ Use the `isChecked` prop to control the radio button state externally.
   codes={[
     {
       code:
-`// Create state to track which radio button is selected
-const [selectedPlan, setSelectedPlan] = useState<string>("monthly");
+`const [selectedPlan, setSelectedPlan] = useState<string>("monthly");
 
-// Handler to update the selected plan
 const handleToggle = (value: string) => {
-  setSelectedPlan(value);
+    setSelectedPlan(value);
 };
 
-// Radio button group with proper state management
 <Column gap="16">
-  <RadioButton
-    name="subscription"
-    value="monthly"
-    label="Monthly subscription"
-    description="Billed monthly at $9.99"
-    isChecked={selectedPlan === "monthly"}
-    onToggle={() => handleToggle("monthly")}
-  />
-  <RadioButton
-    name="subscription"
-    value="annual"
-    label="Annual subscription"
-    description="Billed annually at $99.99"
-    isChecked={selectedPlan === "annual"}
-    onToggle={() => handleToggle("annual")}
-  />
-  <RadioButton
-    name="subscription"
-    value="lifetime"
-    label="Lifetime access"
-    description="One-time payment of $299.99"
-    isChecked={selectedPlan === "lifetime"}
-    onToggle={() => handleToggle("lifetime")}
-  />
+    <RadioButton
+      name="subscription"
+      value="monthly"
+      label="Monthly subscription"
+      description="Billed monthly at $9.99"
+      isChecked={selectedPlan === "monthly"}
+      onToggle={() => handleToggle("monthly")}
+    />
+    <RadioButton
+      name="subscription"
+      value="annual"
+      label="Annual subscription"
+      description="Billed annually at $99.99"
+      isChecked={selectedPlan === "annual"}
+      onToggle={() => handleToggle("annual")}
+    />
+    <RadioButton
+      name="subscription"
+      value="lifetime"
+      label="Lifetime access"
+      description="One-time payment of $299.99"
+      isChecked={selectedPlan === "lifetime"}
+      onToggle={() => handleToggle("lifetime")}
+    />
 </Column>`,
       language: "tsx",
       label: "State"
@@ -104,8 +101,8 @@ Disable the radio button to prevent user interaction.
     {
       code:
 `<RadioButton
-  label="Disabled radio button"
-  disabled
+    label="Disabled radio button"
+    disabled
 />`,
       language: "tsx",
       label: "Disabled"
