--- a/src/content/once-ui/form-controls/input.mdx
+++ b/src/content/once-ui/form-controls/input.mdx
@@ -6,6 +6,8 @@ navLabel: "Input"
 navIcon: "components"
 ---
 
+import { ValidationInputExample } from "../../product/InputExample"
+
 The `Input` component provides a text entry field with floating labels, validation support, and customizable styling. Use it for collecting user input in forms.
 
 <CodeBlock
@@ -14,15 +16,19 @@ The `Input` component provides a text entry field with floating labels, validati
   preview={
     <Input
       id="basic-input"
-      label="Username"
+      label="Email"
+      hasPrefix={<Icon marginLeft="4" onBackground="neutral-weak" name="email" size="xs" />}
     />
   }
   codes={[
     {
       code:
 `<Input
-  id="basic-input"
-  label="Username"
+    id="input-1"
+    label="Email"
+    hasPrefix={
+      <Icon marginLeft="4" onBackground="neutral-weak" name="email" size="xs" />
+    }
 />`,
       language: "tsx",
       label: "Input"
@@ -30,29 +36,83 @@ The `Input` component provides a text entry field with floating labels, validati
   ]}
 />
 
-## Validation
+## Error
 
-The Input component supports error states and validation messages.
+The Input component supports error state and message separately. Access them with the `error` and `errorMessage` props.
 
 <CodeBlock
   marginTop="16"
   marginBottom="24"
   preview={
-    <Input
-      id="error-input"
-      label="Email"
-      error={true}
-      errorMessage="Please enter a valid email address"
-    />
+    <Column fillWidth gap="16">
+      <Input
+        id="error-input"
+        label="Email"
+        error
+      />
+      <Input
+        id="error-input"
+        label="Password"
+        error
+        errorMessage={
+          <Row vertical="center" gap="8">
+            <Icon name="danger" size="xs" />
+            Please enter at least 8 characters
+          </Row>
+        }
+      />
+    </Column>
   }
   codes={[
     {
       code:
 `<Input
-  id="error-input"
-  label="Email"
-  error={true}
-  errorMessage="Please enter a valid email address"
+    id="input-1"
+    label="Email"
+    error
+    errorMessage={
+      <Row vertical="center" gap="8">
+        <Icon name="danger" size="xs" />
+        Please enter a valid email address
+      </Row>
+    }
+/>`,
+      language: "tsx",
+      label: "Error"
+    }
+  ]}
+/>
+
+## Validation
+
+The Input component supports custom validation through the `validate` prop. This prop accepts a function that receives the input value and returns either an error message or null. The validation is happens automatically on value change with an automatic debounce of 1 second.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={<ValidationInputExample />}
+  codes={[
+    {
+      code:
+`const [value, setValue] = useState("");
+
+const validateEmail = (email: any) => {
+    if (!email) return null;
+    
+    const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+    if (!emailRegex.test(email)) {
+      return "Please enter a valid email address";
+    }
+    
+    return null;
+};
+
+<Input
+    id="input-1"
+    value={value}
+    onChange={(e) => setValue(e.target.value)}
+    validate={validateEmail}
+    placeholder="Email"
 />`,
       language: "tsx",
       label: "Validation"
@@ -60,29 +120,44 @@ The Input component supports error states and validation messages.
   ]}
 />
 
-## With prefix and suffix
+## Prefix & Suffix
 
 Add icons or other elements before or after the input text.
 
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  preview={
-    <Input
-      id="prefix-suffix-input"
-      label="Search"
-      hasPrefix={<Icon name="search" size="xs" />}
-      hasSuffix={<IconButton icon="close" size="s" />}
-    />
-  }
+  preview={<SearchInput />}
   codes={[
     {
       code:
-`<Input
-  id="prefix-suffix-input"
-  label="Search"
-  hasPrefix={<Icon name="search" size="xs" />}
-  hasSuffix={<IconButton icon="close" size="s" />}
+`const [searchValue, setSearchValue] = useState<string>("");
+
+const handleChange = (e: React.ChangeEvent<HTMLInputElement>) => {
+    setSearchValue(e.target.value);
+};
+
+const handleClear = () => {
+    setSearchValue("");
+};
+
+<Input
+    id="input-1"
+    label="Search"
+    value={searchValue}
+    onChange={handleChange}
+    hasPrefix={<Icon name="search" size="xs" />}
+    hasSuffix={
+      searchValue.length > 0 ? (
+        <IconButton 
+          variant="ghost" 
+          icon="close" 
+          size="s" 
+          onClick={handleClear}
+          aria-label="Clear search"
+        />
+      ) : null
+    }
 />`,
       language: "tsx",
       label: "Prefix & Suffix"
@@ -90,9 +165,9 @@ Add icons or other elements before or after the input text.
   ]}
 />
 
-## Label as placeholder
+## Placeholder
 
-Use the label as a placeholder that disappears when the input is focused.
+Use the `placeholder` prop to use placeholder instead of label. The placeholder disappears when the input has value. Never use placeholder and label at the same time.
 
 <CodeBlock
   marginTop="16"
@@ -100,20 +175,88 @@ Use the label as a placeholder that disappears when the input is focused.
   preview={
     <Input
       id="placeholder-input"
-      label="Enter your name"
-      labelAsPlaceholder
+      placeholder="Name"
     />
   }
   codes={[
     {
       code:
 `<Input
-  id="placeholder-input"
-  label="Enter your name"
-  labelAsPlaceholder
+    id="input-1"
+    placeholder="Name"
 />`,
       language: "tsx",
-      label: "Label as placeholder"
+      label: "Placeholder"
+    }
+  ]}
+/>
+
+## Description
+
+Use the `description` prop to add a description below the input.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={
+    <Input
+      id="description-input"
+      label="Email"
+      description={<Row vertical="center" gap="4">Provide your email address in the following format: <InlineCode>name@domain.com</InlineCode></Row>}
+    />
+  }
+  codes={[
+    {
+      code:
+`<Input
+    id="input-1"
+    label="Email"
+    description="Provide your email address in the format name@domain.com"
+/>`,
+      language: "tsx",
+      label: "Description"
+    }
+  ]}
+/>
+
+## Custom styling
+
+You can use the `radius` prop to apply custom radius to sides or corners. It works well with the `Column` component's `-1` gap to create a seamless connection between inputs.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={
+    <Column fillWidth gap="-1">
+      <Input
+        radius="top"
+        id="custom-input-name"
+        placeholder="Full name"
+      />
+      <Input
+        radius="bottom"
+        id="custom-input-username"
+        placeholder="Username"
+      />
+    </Column>
+  }
+  codes={[
+    {
+      code:
+`<Column fillWidth gap="16">
+    <Input
+      radius="top"
+      id="input-1"
+      placeholder="Name"
+    />
+    <Input
+      radius="bottom"
+      id="input-2"
+      placeholder="Name"
+    />
+</Column>`,
+      language: "tsx",
+      label: "Custom styling"
     }
   ]}
 />
@@ -124,6 +267,7 @@ Use the label as a placeholder that disappears when the input is focused.
   content={[
     ["id", "string"],
     ["label", "string"],
+    ["placeholder", "string"],
     ["height", ["s", "m"], "m"],
     ["error", "boolean", "false"],
     ["errorMessage", "ReactNode"],
@@ -131,7 +275,6 @@ Use the label as a placeholder that disappears when the input is focused.
     ["radius", ["none", "top", "right", "bottom", "left", "top-left", "top-right", "bottom-right", "bottom-left"]],
     ["hasPrefix", "ReactNode"],
     ["hasSuffix", "ReactNode"],
-    ["labelAsPlaceholder", "boolean", "false"],
     ["cursor", ["interactive"]],
     ["validate", "(value: ReactNode) => ReactNode | null"],
     ["className"],
