--- a/src/content/once-ui/form-controls/chip.mdx
+++ b/src/content/once-ui/form-controls/chip.mdx
@@ -18,9 +18,9 @@ Chips are compact elements that represent discrete information, selections, or f
     {
       code:
 `<Chip label="Default" selected />
-<Chip label="With Icon" prefixIcon="tag" />
+<Chip label="With icon" prefixIcon="calendar" />
 <Chip label="Removable" onRemove={() => {}} />
-<Chip label="Unselected" selected={false} />`,
+<Chip label="Unselected" />`,
       language: "tsx",
       label: "Chip"
     }
@@ -122,7 +122,7 @@ const handleRemove = (id) => {
   ]}
 />
 
-## Props
+## API reference
 
 <PropsTable
   content={[
