--- a/src/content/once-ui/form-controls/dateRangeInput.mdx
+++ b/src/content/once-ui/form-controls/dateRangeInput.mdx
@@ -1,9 +1,88 @@
 ---
 title: "DateRangeInput"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
-updatedAt: "2025-05-04"
+summary: "A dual input component for selecting date ranges with an integrated calendar interface."
+updatedAt: "2025-05-13"
 navLabel: "DateRangeInput"
-navIcon: "learn"
+navIcon: "components"
 ---
 
-## Coming soon
+The `DateRangeInput` component provides a user-friendly interface for selecting date ranges. It combines two input fields with a dropdown calendar interface, allowing users to easily select start and end dates.
+
+## Basic Usage
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={
+    <BasicDateRangeInputExample />
+  }
+  codes={[
+    {
+      code:
+`<DateRangeInput
+  id="basic-date-range-example"
+  startLabel="Start date"
+  endLabel="End date"
+  value={dateRange}
+  onChange={handleDateRangeChange}
+/>`,
+      language: "tsx",
+      label: "Basic"
+    }
+  ]}
+/>
+
+## Custom Labels
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={
+    <CustomLabelDateRangeInputExample />
+  }
+  codes={[
+    {
+      code:
+`<DateRangeInput
+  id="custom-label-date-range-example"
+  startLabel="Check-in"
+  endLabel="Check-out"
+  value={dateRange}
+  onChange={handleDateRangeChange}
+/>`,
+      language: "tsx",
+      label: "Custom Labels"
+    }
+  ]}
+/>
+
+## Features
+
+- **Dual Input Fields**: Separate fields for start and end dates
+- **Calendar Interface**: Visual calendar for intuitive date range selection
+- **Formatted Display**: Displays selected dates in a readable format
+- **Custom Labels**: Configurable labels for start and end date fields
+- **Dropdown Integration**: Uses `DropdownWrapper` for a clean UI experience
+
+## API reference
+
+<PropsTable
+  marginTop="16"
+  marginBottom="24"
+  content={[
+    ["id", "string"],
+    ["startLabel", "string", "'Start'"],
+    ["endLabel", "string", "'End'"],
+    ["value", "DateRange"],
+    ["onChange", "(range: DateRange) => void"],
+    ["minHeight", "number"],
+    ["className"],
+    ["style"]
+  ]}
+/>
+
+## Accessibility
+
+- Clear visual indication of selected date range
+- Keyboard navigation support for calendar interface
+- Proper labeling for screen readers
