--- a/src/content/once-ui/form-controls/input.mdx
+++ b/src/content/once-ui/form-controls/input.mdx
@@ -219,7 +219,131 @@ Use the `description` prop to add a description below the input.
   ]}
 />
 
-## Custom styling
+## NumberInput
+
+The `NumberInput` component provides a specialized input for numeric values with increment and decrement buttons. It supports min, max, and step values to control the range and increments.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={<NumberInputExample />}
+  codes={[
+    {
+      code:
+`const [value, setValue] = useState<number>(0);
+  
+const handleChange = (newValue: number) => {
+  setValue(newValue);
+};
+
+<NumberInput
+  id="number-input-example"
+  label="Quantity"
+  value={value}
+  onChange={handleChange}
+  min={0}
+  max={100}
+  step={1}
+/>`,
+      language: "tsx",
+      label: "NumberInput"
+    }
+  ]}
+/>
+
+## OTPInput
+
+The `OTPInput` component is designed for one-time passwords and verification codes, providing separate input fields for each digit.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={<OTPInputExample />}
+  codes={[
+    {
+      code:
+`const { addToast } = useToast();
+
+const handleComplete = (code: string) => {
+    addToast({
+      variant: "success",
+      message: "Verification code " + code + " submitted successfully"
+    });
+};
+
+<OTPInput
+    id="otp-input-example"
+    length={6}
+    onComplete={handleComplete}
+    autoFocus
+/>`,
+      language: "tsx",
+      label: "OTPInput"
+    }
+  ]}
+/>
+
+## PasswordInput
+
+The `PasswordInput` component extends the standard input with a toggle to show or hide the password text.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={<PasswordInputExample />}
+  codes={[
+    {
+      code:
+`const [password, setPassword] = useState<string>('');
+  
+const handleChange = (e: React.ChangeEvent<HTMLInputElement>) => {
+    setPassword(e.target.value);
+};
+
+<PasswordInput
+    id="password-input-example"
+    label="Password"
+    value={password}
+    onChange={handleChange}
+    placeholder="Enter your password"
+/>`,
+      language: "tsx",
+      label: "PasswordInput"
+    }
+  ]}
+/>
+
+## TagInput
+
+The `TagInput` component allows users to input multiple tags or keywords, displaying them as chips that can be removed individually.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={<TagInputExample />}
+  codes={[
+    {
+      code:
+`const [tags, setTags] = useState<string[]>(['React', 'Next.js']);
+  
+const handleChange = (newTags: string[]) => {
+    setTags(newTags);
+};
+
+<TagInput
+    id="tag-input-example"
+    value={tags}
+    onChange={handleChange}
+    placeholder="Add interest"
+    hasSuffix={<Kbd position="absolute" top="12" right="12">Enter</Kbd>}
+/>`,
+      language: "tsx",
+      label: "TagInput"
+    }
+  ]}
+/>
+
+## Styling
 
 You can use the `radius` prop to apply custom radius to sides or corners. It works well with the `Column` component's `-1` gap to create a seamless connection between inputs.
 
