--- a/src/content/once-ui/form-controls/select.mdx
+++ b/src/content/once-ui/form-controls/select.mdx
@@ -12,29 +12,31 @@ The `Select` component offers a dropdown menu for selecting from a list of optio
   marginTop="16"
   marginBottom="24"
   preview={
-    <Select
-      id="basic-select"
-      label="Choose a country"
-      options={[
-        { label: "United States", value: "us" },
-        { label: "Canada", value: "ca" },
-        { label: "United Kingdom", value: "uk" },
-        { label: "Australia", value: "au" }
-      ]}
-    />
+    <Row fillWidth height={12} vertical="start">
+      <Select
+        id="basic-select"
+        label="Choose a country"
+        options={[
+          { label: "United States", value: "us" },
+          { label: "Canada", value: "ca" },
+          { label: "United Kingdom", value: "uk" },
+          { label: "Australia", value: "au" }
+        ]}
+      />
+    </Row>
   }
   codes={[
     {
       code:
 `<Select
-  id="basic-select"
-  label="Choose a country"
-  options={[
-    { label: "United States", value: "us" },
-    { label: "Canada", value: "ca" },
-    { label: "United Kingdom", value: "uk" },
-    { label: "Australia", value: "au" }
-  ]}
+    id="basic-select"
+    label="Choose a country"
+    options={[
+      { label: "United States", value: "us" },
+      { label: "Canada", value: "ca" },
+      { label: "United Kingdom", value: "uk" },
+      { label: "Australia", value: "au" }
+    ]}
 />`,
       language: "tsx",
       label: "Select"
@@ -50,21 +52,23 @@ Enable search functionality to filter options in large lists.
   marginTop="16"
   marginBottom="24"
   preview={
-    <Select
-      id="searchable-select"
-      label="Choose a country"
-      searchable
-      options={[
-        { label: "United States", value: "us" },
-        { label: "Canada", value: "ca" },
-        { label: "United Kingdom", value: "uk" },
-        { label: "Australia", value: "au" },
-        { label: "Germany", value: "de" },
-        { label: "France", value: "fr" },
-        { label: "Japan", value: "jp" },
-        { label: "Brazil", value: "br" }
-      ]}
-    />
+    <Row fillWidth height={12} vertical="start">
+      <Select
+        id="searchable-select"
+        label="Choose a country"
+        searchable
+        options={[
+          { label: "United States", value: "us" },
+          { label: "Canada", value: "ca" },
+          { label: "United Kingdom", value: "uk" },
+          { label: "Australia", value: "au" },
+          { label: "Germany", value: "de" },
+          { label: "France", value: "fr" },
+          { label: "Japan", value: "jp" },
+          { label: "Brazil", value: "br" }
+        ]}
+      />
+    </Row>
   }
   codes={[
     {
@@ -90,7 +94,7 @@ Enable search functionality to filter options in large lists.
   ]}
 />
 
-## Custom empty state
+## Empty state
 
 Customize the message shown when no options match the search query.
 
@@ -98,33 +102,43 @@ Customize the message shown when no options match the search query.
   marginTop="16"
   marginBottom="24"
   preview={
-    <Select
-      id="empty-state-select"
-      label="Choose a country"
-      searchable={true}
-      emptyState={<Text onBackground="neutral-weak">No matching countries found</Text>}
-      options={[
-        { label: "United States", value: "us" },
-        { label: "Canada", value: "ca" },
-        { label: "United Kingdom", value: "uk" },
-        { label: "Australia", value: "au" }
-      ]}
-    />
+    <Row fillWidth height={12} vertical="start">
+      <Select
+        id="empty-state-select"
+        label="Choose a country"
+        searchable={true}
+        emptyState={
+          <Text onBackground="neutral-weak">
+            No matching countries found
+          </Text>
+        }
+        options={[
+          { label: "United States", value: "us" },
+          { label: "Canada", value: "ca" },
+          { label: "United Kingdom", value: "uk" },
+          { label: "Australia", value: "au" }
+        ]}
+      />
+    </Row>
   }
   codes={[
     {
       code:
 `<Select
-  id="empty-state-select"
-  label="Choose a country"
-  searchable={true}
-  emptyState={<Text onBackground="neutral-weak">No matching countries found</Text>}
-  options={[
-    { label: "United States", value: "us" },
-    { label: "Canada", value: "ca" },
-    { label: "United Kingdom", value: "uk" },
-    { label: "Australia", value: "au" }
-  ]}
+    id="empty-state-select"
+    label="Choose a country"
+    searchable={true}
+    emptyState={
+      <Text onBackground="neutral-weak">
+        No matching countries found
+      </Text>
+    }
+    options={[
+      { label: "United States", value: "us" },
+      { label: "Canada", value: "ca" },
+      { label: "United Kingdom", value: "uk" },
+      { label: "Australia", value: "au" }
+    ]}
 />`,
       language: "tsx",
       label: "Empty State"
