--- a/src/content/once-ui/components/media.mdx
+++ b/src/content/once-ui/components/media.mdx
@@ -11,7 +11,7 @@ navIcon: "components"
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Media
       src="/images/docs/once-ui/vibe-coding-light.jpg"
       alt="Preview"
@@ -20,7 +20,7 @@ navIcon: "components"
       aspectRatio="16/9"
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Media
@@ -43,14 +43,14 @@ Show a skeleton block while content is loading.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Media
       loading
       src="/images/docs/once-ui/vibe-coding-light.jpg"
       aspectRatio="16/9"
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Media
@@ -78,7 +78,7 @@ Enable full-screen zooming for images and videos.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codeInstances={[
+  codes={[
     {
       code:
 `<Media
@@ -100,13 +100,13 @@ The component auto-detects and renders YouTube links, just pass a YouTube URL to
   marginTop="16"
   marginBottom="24"
   previewPadding="0"
-  codePreview={
+  preview={
     <Media
       src="https://www.youtube.com/watch?v=TQT_FSdxbC8"
       aspectRatio="16/9"
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Media
