--- a/src/content/magic-portfolio/seo.mdx
+++ b/src/content/magic-portfolio/seo.mdx
@@ -29,7 +29,7 @@ Social sharing images (open-graph and twitter) are automatically generated with 
 <CodeBlock
     marginBottom="16"
     highlight="4"
-    codeInstances={[
+    codes={[
       {
         code:
 `export async function generateMetadata() {
