--- a/src/content/once-ui/modules/megaMenu.mdx
+++ b/src/content/once-ui/modules/megaMenu.mdx
@@ -11,80 +11,359 @@ Use `MegaMenu` for complex navigational layouts where primary sections include s
 <CodeBlock
   marginTop="16"
   marginBottom="24"
+  codeHeight={24}
   preview={
+    <Row fillWidth height={20} overflow="hidden">
     <MegaMenu
       menuGroups={[
         {
-          id: "product",
-          label: "Product",
-          suffixIcon: "chevronDown",
-          sections: [
-            {
-              title: "Core",
-              links: [
-                {
-                  label: "Dashboard",
-                  href: "/dashboard",
-                  icon: "layoutDashboard",
-                  description: "Your personal control center",
-                },
-                {
-                  label: "Analytics",
-                  href: "/analytics",
-                  icon: "barChart",
-                  description: "Track your performance",
-                },
-              ],
-            },
-          ],
-        },
-      ]}
-    />
-  }
-  codes={[
-    {
-      code:
-`<MegaMenu
-  menuGroups={[
-    {
-      id: "product",
-      label: "Product",
+      id: "products",
+      label: "Products",
       suffixIcon: "chevronDown",
       sections: [
         {
-          title: "Core",
+          title: "Featured",
+          links: [
+            {
+              label: "Analytics",
+              href: "#",
+              icon: "analytics",
+              description: "Get insights into your data",
+            },
+            {
+              label: "Security",
+              href: "#",
+              icon: "security",
+              description: "Protect your assets",
+            },
+          ],
+        },
+        {
+          title: "Tools",
           links: [
             {
               label: "Dashboard",
-              href: "/dashboard",
-              icon: "layoutDashboard",
-              description: "Your personal control center",
+              href: "#",
+              icon: "apps",
+              description: "Monitor your metrics",
             },
             {
-              label: "Analytics",
-              href: "/analytics",
-              icon: "barChart",
-              description: "Track your performance",
+              label: "Settings",
+              href: "#",
+              icon: "settings",
+              description: "Configure your preferences",
             },
           ],
         },
       ],
     },
-  ]}
+    {
+      id: "solutions",
+      label: "Solutions",
+      suffixIcon: "chevronDown",
+      sections: [
+        {
+          title: "By industry",
+          links: [
+            {
+              label: "Enterprise",
+              href: "#",
+              icon: "components",
+              description: "Solutions for large organizations",
+            },
+            {
+              label: "Startups",
+              href: "#",
+              icon: "rocket",
+              description: "Perfect for growing companies",
+            },
+          ],
+        },
+        {
+          title: "By team",
+          links: [
+            {
+              label: "Developers",
+              href: "#",
+              icon: "code",
+              description: "Tools and APIs",
+            },
+            {
+              label: "Design teams",
+              href: "#",
+              icon: "sparkle",
+              description: "Creative solutions",
+            },
+          ],
+        },
+      ],
+    },
+    {
+      id: "resources",
+      label: "Resources",
+      suffixIcon: "chevronDown",
+      sections: [
+        {
+          title: "Documentation",
+          links: [
+            {
+              label: "Guides",
+              href: "#",
+              icon: "pages",
+              description: "Learn how to use our platform",
+            },
+            {
+              label: "API reference",
+              href: "#",
+              icon: "code",
+              description: "Technical documentation",
+            },
+          ],
+        },
+        {
+          title: "Support",
+          links: [
+            {
+              label: "Help center",
+              href: "#",
+              icon: "help",
+              description: "Get your questions answered",
+            },
+            {
+              label: "Community",
+              href: "#",
+              icon: "person",
+              description: "Connect with other users",
+            },
+          ],
+        },
+      ],
+    },
+    {
+      id: "company",
+      label: "Company",
+      suffixIcon: "chevronDown",
+      sections: [
+        {
+          title: "About",
+          links: [
+            {
+              label: "Our story",
+              href: "#",
+              icon: "pages",
+              description: "Learn about our journey",
+            },
+            {
+              label: "Careers",
+              href: "#",
+              icon: "rocket",
+              description: "Join our team",
+            },
+          ],
+        },
+        {
+          title: "Connect",
+          links: [
+            {
+              label: "Blog",
+              href: "#",
+              icon: "document",
+              description: "Latest updates and news",
+            },
+            {
+              label: "Contact",
+              href: "#",
+              icon: "email",
+              description: "Get in touch with us",
+            },
+          ],
+        },
+      ],
+    },
+      ]}
+    />
+  </Row>
+  }
+  codes={[
+    {
+      code:
+`<MegaMenu
+    menuGroups={[
+      {
+        id: "products",
+        label: "Products",
+        suffixIcon: "chevronDown",
+        sections: [
+          {
+            title: "Featured",
+            links: [
+              {
+                label: "Analytics",
+                href: "/analytics",
+                icon: "HiOutlineDocumentChartBar",
+                description: "Get insights into your data",
+              },
+              {
+                label: "Security",
+                href: "/security",
+                icon: "HiOutlineShieldCheck",
+                description: "Protect your assets",
+              },
+            ],
+          },
+          {
+            title: "Tools",
+            links: [
+              {
+                label: "Dashboard",
+                href: "/dashboard",
+                icon: "HiOutlineSquares2X2",
+                description: "Monitor your metrics",
+              },
+              {
+                label: "Settings",
+                href: "/settings",
+                icon: "HiCog8Tooth",
+                description: "Configure your preferences",
+              },
+            ],
+          },
+        ],
+      },
+      {
+        id: "solutions",
+        label: "Solutions",
+        suffixIcon: "chevronDown",
+        sections: [
+          {
+            title: "By industry",
+            links: [
+              {
+                label: "Enterprise",
+                href: "/enterprise",
+                icon: "cube",
+                description: "Solutions for large organizations",
+              },
+              {
+                label: "Startups",
+                href: "/startups",
+                icon: "rocket",
+                description: "Perfect for growing companies",
+              },
+            ],
+          },
+          {
+            title: "By team",
+            links: [
+              {
+                label: "Developers",
+                href: "/developers",
+                icon: "code",
+                description: "Tools and APIs",
+              },
+              {
+                label: "Design teams",
+                href: "/design",
+                icon: "sparkle",
+                description: "Creative solutions",
+              },
+            ],
+          },
+        ],
+      },
+      {
+        id: "resources",
+        label: "Resources",
+        suffixIcon: "chevronDown",
+        sections: [
+          {
+            title: "Documentation",
+            links: [
+              {
+                label: "Guides",
+                href: "/guides",
+                icon: "book",
+                description: "Learn how to use our platform",
+              },
+              {
+                label: "API reference",
+                href: "/api",
+                icon: "code",
+                description: "Technical documentation",
+              },
+            ],
+          },
+          {
+            title: "Support",
+            links: [
+              {
+                label: "Help center",
+                href: "/help",
+                icon: "infoCircle",
+                description: "Get your questions answered",
+              },
+              {
+                label: "Community",
+                href: "/community",
+                icon: "people",
+                description: "Connect with other users",
+              },
+            ],
+          },
+        ],
+      },
+      {
+        id: "company",
+        label: "Company",
+        suffixIcon: "chevronDown",
+        sections: [
+          {
+            title: "About",
+            links: [
+              {
+                label: "Our story",
+                href: "/about",
+                icon: "book",
+                description: "Learn about our journey",
+              },
+              {
+                label: "Careers",
+                href: "/careers",
+                icon: "rocket",
+                description: "Join our team",
+              },
+            ],
+          },
+          {
+            title: "Connect",
+            links: [
+              {
+                label: "Blog",
+                href: "/blog",
+                icon: "document",
+                description: "Latest updates and news",
+              },
+              {
+                label: "Contact",
+                href: "/contact",
+                icon: "email",
+                description: "Get in touch with us",
+              },
+            ],
+          },
+        ],
+      },
+    ]}
 />`,
       language: "tsx",
-      label: "Basic usage"
+      label: "Megamenu"
     }
   ]}
 />
 
-## Responsive dropdown
+## Usage
 
-Dropdown alignment and sizing automatically adapts to the hovered group.
-
-## Auto-selection based on route
-
-When `href` is matched by the current route, the group or item is marked `selected`.
+The `MegaMenu` component is designed for desktop screens. You can hide it at the medium breakpoint by adding the `hide="m"` prop directly to the component. Make sure you design a mobile navigation that works well with your app.
 
 ## API reference
 
@@ -100,19 +379,6 @@ When `href` is matched by the current route, the group or item is marked `select
 ### Types
 
 ```ts
-interface MenuLink {
-  label: ReactNode;
-  href: string;
-  icon?: string;
-  description?: ReactNode;
-  selected?: boolean;
-}
-
-interface MenuSection {
-  title?: ReactNode;
-  links: MenuLink[];
-}
-
 interface MenuGroup {
   id: string;
   label: ReactNode;
@@ -121,3 +387,17 @@ interface MenuGroup {
   selected?: boolean;
   sections?: MenuSection[];
 }
+
+interface MenuSection {
+  title?: ReactNode;
+  links: MenuLink[];
+}
+
+interface MenuLink {
+  label: ReactNode;
+  href: string;
+  icon?: string;
+  description?: ReactNode;
+  selected?: boolean;
+}
+```
