--- a/src/content/once-ui/basics/structure.mdx
+++ b/src/content/once-ui/basics/structure.mdx
@@ -740,7 +740,7 @@ Use utility props to apply spacing consistently, such as the `padding`, `padding
     </Column>
 </Column>`,
       language: "tsx",
-      label: "Padding and gap"
+      label: "Spacing"
     }
   ]}
 />
