--- a/src/content/once-ui/modules/mediaUpload.mdx
+++ b/src/content/once-ui/modules/mediaUpload.mdx
@@ -190,7 +190,7 @@ By default, MediaUpload compresses images before uploading. You can customize th
     ["onFileUpload", "(file: File) => Promise<void>"],
     ["compress", ["true", "false"], "true"],
     ["aspectRatio", "string", "'16 / 9'"],
-    ["initialPreviewImage", "string | null", "null"],
+    ["initialPreviewImage", ["string", "null"], "null"],
     ["emptyState", "React.ReactNode", "'Drag and drop or click to browse'"],
     ["quality", "number", "0.8"],
     ["sizes", "string"],
