--- a/src/content/once-ui/form-controls/input.mdx
+++ b/src/content/once-ui/form-controls/input.mdx
@@ -233,17 +233,17 @@ The `NumberInput` component provides a specialized input for numeric values with
 `const [value, setValue] = useState<number>(0);
   
 const handleChange = (newValue: number) => {
-  setValue(newValue);
+    setValue(newValue);
 };
 
 <NumberInput
-  id="number-input-example"
-  label="Quantity"
-  value={value}
-  onChange={handleChange}
-  min={0}
-  max={100}
-  step={1}
+    id="number-input-example"
+    label="Quantity"
+    value={value}
+    onChange={handleChange}
+    min={0}
+    max={100}
+    step={1}
 />`,
       language: "tsx",
       label: "NumberInput"
@@ -258,7 +258,7 @@ The `OTPInput` component is designed for one-time passwords and verification cod
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  preview={<OTPInputExample />}
+  preview={<OTPInputExample autoFocus={false} />}
   codes={[
     {
       code:
