update pagination blocks

--- a/src/content/once-ui/form-controls/textarea.mdx
+++ b/src/content/once-ui/form-controls/textarea.mdx
@@ -293,14 +293,14 @@ Use the `validate` prop to add custom validation to the `Textarea`.
     ["id", "string"],
     ["label", "string"],
     ["placeholder", "string"],
-    ["lines", "number | 'auto'", "3"],
+    ["lines", ["number", "auto"], "3"],
     ["error", "boolean", "false"],
     ["errorMessage", "ReactNode"],
     ["description", "ReactNode"],
-    ["radius", "'none' | 'top' | 'right' | 'bottom' | 'left' | 'top-left' | 'top-right' | 'bottom-right' | 'bottom-left'"],
+    ["radius", ["none", "top", "right", "bottom", "left", "top-left", "top-right", "bottom-right", "bottom-left"], "none"],
     ["hasPrefix", "ReactNode"],
     ["hasSuffix", "ReactNode"],
-    ["resize", "'horizontal' | 'vertical' | 'both' | 'none'", "'vertical'"],
+    ["resize", ["horizontal", "vertical", "both", "none"], "vertical"],
     ["validate", "(value: ReactNode) => ReactNode | null"],
     ["className"],
     ["style"]
